<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/settingsCenterContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textSettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_server_url"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

        <EditText
            android:id="@+id/editServerUrlSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/server_url_hint"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnSaveUrlSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_server_url" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
